Fix button z-indexing.

--- a/app/stylesheets/components/button.css
+++ b/app/stylesheets/components/button.css
@@ -1,3 +1,7 @@
+.button-outline {
+  z-index: 0;
+}
+
 .button-outline,
 .button-outline:focus {
   border-width: 2px;
